--- a/.ssq.yml
+++ b/.ssq.yml
@@ -1,5 +1,5 @@
 patterns:
-  - name: "generic-api-key-env"
+  generic-api-key-env:
     description: "Generic API key in environment variable"
-    pattern: "\w+_API_KEY"
+    regex: "API_KEY\\s*="
     severity: "LOW"
