feat: name binary ssq

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ edition = "2021"
 name = "secret-squirrel"
 version = "0.1.0"
 
+[[bin]]
+name = "ssq"
+path = "src/main.rs"
+
 [dependencies]
 anyhow = "1.0"
 clap = { version = "4.4", features = ["derive"] }
