--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,10 @@ grep-regex = "0.1.11"
 grep-searcher = "0.1.11"
 ignore = "0.4"
 indicatif = "0.17.7"
+memmap2 = "0.7"
+parking_lot = "0.12"
+rayon = "1.8"
+regex = "1.10"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
 thiserror = "2.0.11"
