--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,11 +19,13 @@ ignore = "0.4"
 indicatif = "0.17.7"
 memmap2 = "0.7"
 parking_lot = "0.12"
+ratatui = { version = "0.28", features = ["crossterm"] }
 rayon = "1.8"
 regex = "1.10"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
 thiserror = "2.0.11"
+tokio = { version = "1.34", features = ["full"] }
 
 [dev-dependencies]
 tempfile = "3.16.0"
