feat: properly handle interrupts

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ path = "src/main.rs"
 anyhow = "1.0"
 clap = { version = "4.4", features = ["derive"] }
 console = "0.15.10"
-crossterm = "0.27"
+ctrlc = "3.4"
 grep-matcher = "0.1.6"
 grep-regex = "0.1.11"
 grep-searcher = "0.1.11"
