feat: add config schema

--- a/.ssq.yml
+++ b/.ssq.yml
@@ -1,4 +1,7 @@
+# yaml-language-server: $schema=./schema/ssq.schema.json
+
 # severity: "MEDIUM"
+
 patterns:
   generic-api-key-env:
     description: "Generic API key in environment variable"
