feat: add ignore behavior config

--- a/.ssq.yml
+++ b/.ssq.yml
@@ -2,6 +2,9 @@
 
 # severity: "MEDIUM"
 
+ignore_paths:
+  - "env/**/*"
+
 patterns:
   generic-api-key-env:
     description: "Generic API key in environment variable"
